@@ -117,6 +117,7 @@
 	- add _build_platform and _host_platform macros.
 	- restore -fPIC -DPIC for libraries, -fpie -pie for executables only.
 	- assign mips n32 elf32 as color 4.
+	- emit Requires: pkgconfig automagically for pkgs that contain *.pc.
 
 4.4.6 -> 4.4.7:
 	- start 4.4.7 development.
